# RISC-V_emulator

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  utils.rs
src/emulator/: cpu.rs  decode.rs  execute.rs  fetch.rs  mod.rs
src/emulator/cpu/: memory.rs  mod.rs  registers.rs
src/instruction_set_definition/: mod.rs  operations.rs
test_binaries/: matrix_mult.asm
