[package]
name = "riscv-emulator"
version = "0.1.0"
edition = "2021"
authors = [
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_more = "0.99"
elf = "0.7.4"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
perf = "deny"
